# pardus-store

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  app-list  file.qrc  images.qrc  pardus-store.desktop  pardus-store.pro  qml.qrc  qtquickcontrols2.conf  tr.org.pardus.pkexec.pardus-store.policy  translations.qrc
debian/: changelog  control  copyright  gbp.conf  pardus-store.postinst
debian/source/: local-options
src/: application.cpp  application.h  applicationdetail.cpp  applicationdetail.h  applicationlistmodel.cpp  applicationlistmodel.h  artwork.cpp  artwork.h  condition.h  dpkg-progress.cpp  dpkg-progress.h  filehandler.cpp  filehandler.h  helper.cpp  helper.h  iconprovider.h  main.cpp  namfactory.h  networkhandler.cpp  networkhandler.h  packagehandler.cpp  packagehandler.h  screenshotinfo.cpp  screenshotinfo.h  singleton.cpp  singleton.h
translations/: pardus-store.ts  pardus-store_tr.qm  pardus-store_tr.ts
ui/: ApplicationDelegate.qml  ApplicationDetail.qml  ApplicationList.qml  BottomDock.qml  CategoryDelegate.qml  ConfirmationDialog.qml  FadeAnimation.qml  Home.qml  InfoDialog.qml  NavigationBar.qml  ProgressBarCircle.qml  QueueDialog.qml  SearchBar.qml  Seperator.qml  Settings.qml  SplashScreen.qml  SurveyDetail.qml  home.qml  list.qml  main.qml  test.qml
